@@ -1,5 +1,10 @@
 2020-02-19  Jonathan Wakely  <jwakely@redhat.com>
 
+	* include/std/memory_resource (polymorphic_allocator::allocate)
+	(polymorphic_allocator::allocate_object): Change type of exception to
+	bad_array_new_length (LWG 3237).
+	* testsuite/20_util/polymorphic_allocator/lwg3237.cc: New test.
+
 	* include/std/type_traits (__cpp_lib_unwrap_ref): Define (LWG 3348).
 	* include/std/version (__cpp_lib_unwrap_ref): Likewise.
 	* testsuite/20_util/unwrap_reference/1.cc: Check macro.
